--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -699,7 +699,7 @@ section {
   transition: 0.3s;
   position: relative;
   display: block;
-    height: 400px;
+    height: 350px;
     width: 100%;
 }
 
@@ -1432,6 +1432,14 @@ margin-top: 70px;
   margin-bottom: 30px !important;
   color: #000000 !important;
 }
+@media (max-width: 575px) {
+
+  .section-title h2 {
+    font-size: 25px;
+    margin-bottom: 30px !important;
+    color: #000000 !important;
+  }
+}
 .section-title p {
   color: gray;
   margin-bottom: 24px;
@@ -1644,6 +1652,18 @@ text-align: center;
     position: relative;
     display: block;
     height: 500px;
+    width: 100%;
+
+  }
+  
+}
+@media (max-width: 500px) {
+ 
+  .portfolio .portfolio-wrap img {
+    transition: 0.3s;
+    position: relative;
+    display: block;
+    height: 300px;
     width: 100%;
 
   }
@@ -1974,9 +1994,41 @@ width: 85vw;
   border-radius: 5px;
   font-size: 15px;
   font-weight: 600;
-  height: 50px;
+  height: 40px;
   justify-content: center;
-  min-width: 170px;
+  min-width: 120px;
+}
+
+@media (max-width:800px) {
+  .category_list button {
+    border-radius: 5px;
+    font-size: 13px;
+    font-weight: 600;
+    height: 30px;
+    justify-content: center;
+    min-width: 80px;
+  }
+}
+@media (max-width:600px) {
+  .category_list ul{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    row-gap: 40px;
+    
+  }
+  .category_list ul li{
+    margin-bottom: 20px;
+  }
+  .category_list button {
+    border-radius: 5px;
+    font-size: 13px;
+
+    font-weight: 600;
+    height: 30px;
+    justify-content: center;
+    min-width: 180px;
+  }
 }
 
 .category_list .active
@@ -2098,4 +2150,130 @@ width: 85vw;
   align-items: center;
   text-align: center;
   width: 30px;
+}
+
+
+.header-right .cart-toggle {
+  margin-right: 20px;
+  position: relative;
+}
+
+.cart-toggle i {
+  font-size: 27px !important;
+}
+
+
+
+#header .cart-count {
+  align-items: center;
+  background: #b67926;
+  background: var(--color-primary);
+  border-radius: 50%;
+  color: #fff;
+  display: flex;
+  font-size: 11px;
+  height: 18px;
+  justify-content: center;
+  line-height: 18px;
+  position: absolute;
+  right: -10px;
+  width: 18px;
+}
+#header .cart-count {
+  top: -8px;
+}
+
+
+.cartsec, .cartsec .cartsec-media {
+  position: relative;
+  width: 100%;
+}
+.cartsec {
+  background: var(--color-white);
+  border-bottom: 1px solid #ebebeb;
+  border-bottom: 1px solid rgb(var(--color-border-input));
+  margin-bottom: 25px;
+  padding-bottom: 25px;
+}
+.cartsec, .cartsec .cartsec-media {
+  position: relative;
+  width: 100%;
+}
+.cartsec .cartsec-media img {
+  width: 100%;
+  height: 190px;
+}
+.cartsec .cartsec-name {
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  font-size: 18px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.cartsec .cartsec-price {
+  align-items: center;
+  display: flex;
+  font-size: 18px;
+  margin-top: 15px;
+}
+.cartsec-price .price-old {
+  color: #aaa;
+  text-decoration: line-through;
+}
+.cartsec-footer, .qtyinput {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+.cartsec .price-new {
+  font-weight: 600;
+}
+
+
+.cartsec-footer .product_quantity
+{
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0px;
+  /* border: solid var(--color-primary) .5px; */
+  background-color: #eaeaea;
+  /* padding: 10px; */
+  max-width: 100px;
+  align-items: center;
+}
+
+.cartsec-footer .product_quantity button{
+  border: inherit;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+ 
+/* .cartsec-footer .product_quantity .product_decress
+{
+  width: 100%;
+  height: 100%;
+} */
+
+
+.cartsec-footer .product_quantity .product_input
+{
+  height: 100%;
+}
+.cartsec-footer .product_quantity .product_input input{
+  height: 40px;
+  border: inherit;
+  background-color: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 30px;
+}
+
+.empty_cart{
+  width: 100%;
+  align-items: center;
+  text-align: center;
 }
